traces/bug_854.txt
examples++-load/iovtk.cpp:2754: error: DEAD_STORE
  The value written to &ttff (type Fem2D::Tet*) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:2754:3: Write of unused value
2752.       	  ivt[j-firstCell[i]] = IntCells[j];
2753.   	}
2754.   	(ttff++)->set(vff, ivt, label);
          ^
2755.   	break;  
2756.         default: 
